--- a/styles/popup_styles.css
+++ b/styles/popup_styles.css
@@ -1,107 +1,33 @@
-/* .content {
-    width: 300px;
-    height: 300px;
-    margin: 20px;
-} */
-/* #save {
-    margin: 20px;
-    background-color: #4CAF50; 
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    float: right;
-} */
-body {
-  padding: 0;
-  margin: 0;
-  /* font-size: 16px; */
-  /* line-height: 1.5; */
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* -webkit-box-orient: vertical; */
-  /* -webkit-box-direction: normal; */
-  scroll-behavior: smooth;
+.content {
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+}
+#save {
+  margin: 20px;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  float: right;
 }
 #save:hover {
   cursor: pointer;
 }
-.select-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-height: 38px;
-}
-.arrow {
-  position: absolute;
-  top: 50%;
-  right: 12px;
-  pointer-events: none;
-  transform: translateY(-50%);
-}
-/* #status {
+#status {
   font-weight: bold;
   margin-top: 10px;
   font-size: 14px;
-  color: #4caf50;
-} */
-/* #donate {
+  color: #4CAF50; /* Green */
+}
+#donate {
   font-size: 16px;
 }
 label {
-  font-size: 14px;
-} */
-
-.text-accent0 {
-  color: #5b5e6c;
-}
-.bg-accent0 {
-  background-color: #5b5e6c;
-}
-.border-accent0 {
-  border-color: #5b5e6c;
-}
-
-.text-accent1 {
-  color: #325eff;
-}
-.bg-accent1 {
-  background-color: #325eff;
-}
-.border-accent1 {
-  border-color: #325eff;
-}
-
-.text-accent2 {
-  color: #a7aebb;
-}
-.bg-accent2 {
-  background-color: #a7aebb;
-}
-.border-accent2 {
-  border-color: #a7aebb;
-}
-
-.text-accent3 {
-  color: #C7112F;
-}
-.bg-accent3 {
-  background-color: #C7112F;
-}
-.border-accent3 {
-  border-color: #C7112F;
-}
-
-.text-accent4 {
-  color: #1C428A;
-}
-.bg-accent4 {
-  background-color: #1C428A;
-}
-.border-accent4 {
-  border-color: #1C428A;
+  font-size: 1
 }
